[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://GameOverUI.gd" id="1"]
[ext_resource type="FontFile" uid="uid://d0cp5hqqocvo7" path="res://edit-undo.brk.ttf" id="2"]

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="MainText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 48
text = "You forgot everything
They took you back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -90.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 24
text = "You lose"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -30.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 18
text = "[Press any button to continue]"
horizontal_alignment = 1
vertical_alignment = 1
